# lt_ai_coach

./: .gitignore  README.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.ts
config/: config.example.json
data/catalog/: candidate-map.tsv  champions.json  mod-portraits.json  portraits.json
design/mockups/: README.txt  compact-overlay.html  draft-board-flipcards.html  draft-board.html  tier-list.html
design/prototypes/player-hub/: README.md  index.html  prototype.js  styles.css
docs/: architecture.md  asset-sources.md  performance-logging.md  requirements.md  ui-modernization-notes.md
scripts/: build-portrait-catalog.py  export-champion-catalog.js  summarize-performance.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: athletes.rs  champion_registry.rs  database.rs  draft.rs  draft_bridge.rs  i18n.rs  interactions.rs  lib.rs  main.rs  manual_tiers.rs  openrouter.rs  patch.rs  performance.rs  pilot.rs  save_provider.rs  statistics.rs
src-tauri/src/recommendation/: interaction.rs  mod.rs  strength.rs
src/draft/: README.md
src/llm/: README.md
src/providers/: README.md  schema.js
src/statistics/: README.md
src/ui/: App.test.ts  App.tsx  README.md  styles.css  tokens.css  types.ts
src/ui/commands/: appCommands.test.ts  appCommands.ts
src/ui/components/: ChampionDetailPanel.tsx  ChampionPortraitView.test.ts  (+26 more)
translations/: README-FIRST.txt
translations/zh-hans/: base.json
translations/zh-hant/: base.json
(+34 files in other folders)
