[package]
name = "lt-ai-coach"
version = "1.0.1"
description = "Role-aware Teamfight Manager 2 draft companion"
authors = ["LT"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "lt_ai_coach_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
